# docs/manekani/swagger.json
@@ -18,9 +18,165 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8081",
+    "host": "127.0.0.1:8080",
     "basePath": "/",
     "paths": {
+        "/api/tokens": {
+            "get": {
+                "security": [
+                    {
+                        "Login": []
+                    }
+                ],
+                "description": "Get all user's API tokens",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user",
+                    "tokens"
+                ],
+                "summary": "Get all user's API tokens",
+                "operationId": "get-token-query",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/apicommon.APIResponse-array_tokens_UserTokenPartial"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/apicommon.APIResponse-any"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apicommon.APIResponse-any"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "Login": []
+                    }
+                ],
+                "description": "Creates a new API token with the given permissions",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user",
+                    "tokens"
+                ],
+                "summary": "Create a new API token",
+                "operationId": "post-token-create",
+                "parameters": [
+                    {
+                        "description": "The API token options",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/tokens.GenerateTokenRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/apicommon.APIResponse-string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apicommon.APIResponse-any"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/apicommon.APIResponse-any"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apicommon.APIResponse-any"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/tokens/{id}": {
+            "delete": {
+                "security": [
+                    {
+                        "Login": []
+                    }
+                ],
+                "description": "Deletes an API token by the given ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user",
+                    "tokens"
+                ],
+                "summary": "Delete an API token",
+                "operationId": "delete-token-delete",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "The API token ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content",
+                        "schema": {
+                            "$ref": "#/definitions/apicommon.APIResponse-any"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apicommon.APIResponse-any"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/apicommon.APIResponse-any"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apicommon.APIResponse-any"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/subject": {
             "get": {
                 "description": "Return a list of all subjects",
@@ -44,40 +200,6 @@
                             "items": {
                                 "$ref": "#/definitions/cards.PartialSubject"
                             }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Creates a subject with the given values",
-                "consumes": [
-                    "multipart/form-data"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "cards",
-                    "subject"
-                ],
-                "summary": "Create a new subject",
-                "operationId": "post-subject-create",
-                "parameters": [
-                    {
-                        "description": "The subject to be created",
-                        "name": "subject",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/cards.CreateSubjectForm"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/cards.Subject"
                         }
                     }
                 }
@@ -187,6 +309,11 @@
                 }
             }
         },
+        "/apiTODO/v1/subject": {
+            "post": {
+                "responses": {}
+            }
+        },
         "/health": {
             "get": {
                 "description": "Get the status of the server.",
@@ -214,115 +341,46 @@
         }
     },
     "definitions": {
-        "cards.ContentMeta": {
+        "apicommon.APIResponse-any": {
             "type": "object",
             "properties": {
-                "attachment": {
+                "code": {
                     "type": "integer"
                 },
-                "content_type": {
+                "data": {},
+                "message": {
                     "type": "string"
-                },
-                "group": {
-                    "type": "string"
-                },
-                "metadata": {
-                    "type": "object",
-                    "additionalProperties": {}
                 }
             }
         },
-        "cards.CreateSubjectForm": {
+        "apicommon.APIResponse-array_tokens_UserTokenPartial": {
             "type": "object",
-            "required": [
-                "data"
-            ],
             "properties": {
-                "data": {
-                    "type": "object",
-                    "required": [
-                        "deck",
-                        "level",
-                        "name",
-                        "slug"
-                    ],
-                    "properties": {
-                        "complimentary_study_data": {
-                            "type": "array",
-                            "items": {
-                                "type": "object",
-                                "additionalProperties": {
-                                    "type": "string"
-                                }
-                            }
-                        },
-                        "deck": {
-                            "type": "string"
-                        },
-                        "dependencies": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        },
-                        "dependents": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        },
-                        "kind": {
-                            "type": "string"
-                        },
-                        "level": {
-                            "type": "integer"
-                        },
-                        "name": {
-                            "type": "string"
-                        },
-                        "priority": {
-                            "type": "integer"
-                        },
-                        "resources": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/cards.RemoteContent"
-                                }
-                            }
-                        },
-                        "similars": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        },
-                        "slug": {
-                            "type": "string"
-                        },
-                        "study_data": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/cards.StudyData"
-                            }
-                        },
-                        "value": {
-                            "type": "string"
-                        },
-                        "value_image": {
-                            "$ref": "#/definitions/cards.RemoteContent"
-                        }
-                    }
+                "code": {
+                    "type": "integer"
                 },
-                "resource_meta[]": {
+                "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/cards.ContentMeta"
+                        "$ref": "#/definitions/tokens.UserTokenPartial"
                     }
                 },
-                "value_image_meta": {
-                    "$ref": "#/definitions/cards.ContentMeta"
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "apicommon.APIResponse-string": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
                 }
             }
         },
@@ -381,19 +439,18 @@
                     "type": "string"
                 },
                 "value_image": {
-                    "$ref": "#/definitions/cards.RemoteContent"
+                    "type": "string"
                 }
             }
         },
-        "cards.RemoteContent": {
+        "cards.Resource": {
             "type": "object",
             "properties": {
-                "content_type": {
-                    "type": "string"
-                },
                 "metadata": {
                     "type": "object",
-                    "additionalProperties": {}
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 },
                 "url": {
                     "type": "string"
@@ -443,14 +500,9 @@
         "cards.Subject": {
             "type": "object",
             "properties": {
-                "complimentary_study_data": {
-                    "type": "array",
-                    "items": {
-                        "type": "object",
-                        "additionalProperties": {
-                            "type": "string"
-                        }
-                    }
+                "additional_study_data": {
+                    "type": "object",
+                    "additionalProperties": {}
                 },
                 "created_at": {
                     "type": "string"
@@ -490,12 +542,9 @@
                     "type": "integer"
                 },
                 "resources": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/definitions/cards.RemoteContent"
-                        }
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/cards.Resource"
                     }
                 },
                 "similars": {
@@ -520,21 +569,16 @@
                     "type": "string"
                 },
                 "value_image": {
-                    "$ref": "#/definitions/cards.RemoteContent"
+                    "type": "string"
                 }
             }
         },
         "cards.UpdateSubjectRequest": {
             "type": "object",
             "properties": {
-                "complimentary_study_data": {
-                    "type": "array",
-                    "items": {
-                        "type": "object",
-                        "additionalProperties": {
-                            "type": "string"
-                        }
-                    }
+                "additional_study_data": {
+                    "type": "object",
+                    "additionalProperties": {}
                 },
                 "dependencies": {
                     "type": "array",
@@ -561,12 +605,9 @@
                     "type": "integer"
                 },
                 "resources": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/definitions/cards.RemoteContent"
-                        }
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/cards.Resource"
                     }
                 },
                 "similars": {
@@ -588,9 +629,94 @@
                     "type": "string"
                 },
                 "value_image": {
-                    "$ref": "#/definitions/cards.RemoteContent"
+                    "type": "string"
                 }
             }
+        },
+        "tokens.APITokenCapabilities": {
+            "type": "object",
+            "properties": {
+                "token_capability_review_create": {
+                    "type": "boolean"
+                },
+                "token_capability_study_material_create": {
+                    "type": "boolean"
+                },
+                "token_capability_study_material_update": {
+                    "type": "boolean"
+                },
+                "token_capability_subject_create": {
+                    "type": "boolean"
+                },
+                "token_capability_subject_delete": {
+                    "type": "boolean"
+                },
+                "token_capability_subject_update": {
+                    "type": "boolean"
+                },
+                "token_capability_user_delete": {
+                    "type": "boolean"
+                },
+                "token_capability_user_update": {
+                    "type": "boolean"
+                },
+                "token_capabilty_deck_create": {
+                    "type": "boolean"
+                },
+                "token_capabilty_deck_delete": {
+                    "type": "boolean"
+                },
+                "token_capabilty_deck_update": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "tokens.APITokenClaims": {
+            "type": "object",
+            "properties": {
+                "capabilities": {
+                    "$ref": "#/definitions/tokens.APITokenCapabilities"
+                }
+            }
+        },
+        "tokens.GenerateTokenRequest": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "permissions": {
+                    "$ref": "#/definitions/tokens.APITokenCapabilities"
+                }
+            }
+        },
+        "tokens.UserTokenPartial": {
+            "type": "object",
+            "properties": {
+                "claims": {
+                    "$ref": "#/definitions/tokens.APITokenClaims"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "prefix": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKey": {
+            "description": "API key authentication",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        },
+        "Login": {
+            "description": "Login at http://127.0.0.1:4455/login and copy the contents of the 'ory_kratos_session' cookie",
+            "type": "apiKey",
+            "name": "ory_kratos_session",
+            "in": "cookie"
         }
     },
     "tags": [
@@ -613,6 +739,14 @@
         {
             "description": "Vocabulary cards actions",
             "name": "vocabulary"
+        },
+        {
+            "description": "User related",
+            "name": "user"
+        },
+        {
+            "description": "API token related",
+            "name": "tokens"
         }
     ]
 }
